[gd_scene load_steps=5 format=3 uid="uid://cy24m42sn5621"]

[ext_resource type="Script" path="res://generator/generator.gd" id="1_fap1n"]
[ext_resource type="Curve" uid="uid://d1c0igupy446y" path="res://generator/curve.tres" id="2_rd6wi"]
[ext_resource type="Gradient" uid="uid://b8fn3li1wy3m3" path="res://generator/gradient.tres" id="3_oto2a"]

[sub_resource type="ViewportTexture" id="ViewportTexture_by2e7"]
viewport_path = NodePath("PanelContainer/BoxContainer2/BoxContainer/preview/SubViewport")

[node name="Generator" type="Control" node_paths=PackedStringArray("sub_vp", "preview")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fap1n")
sub_vp = NodePath("PanelContainer/BoxContainer2/BoxContainer/preview/SubViewport")
preview = NodePath("PanelContainer/BoxContainer2/BoxContainer/preview")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
offset_right = 804.0
offset_bottom = 570.0

[node name="BoxContainer2" type="BoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="PanelContainer/BoxContainer2"]
layout_mode = 2
vertical = true

[node name="preview" type="TextureRect" parent="PanelContainer/BoxContainer2/BoxContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
size_flags_vertical = 3
texture = SubResource("ViewportTexture_by2e7")
expand_mode = 1

[node name="SubViewport" type="SubViewport" parent="PanelContainer/BoxContainer2/BoxContainer/preview"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(128, 128)
render_target_update_mode = 4

[node name="Line2D" type="Line2D" parent="PanelContainer/BoxContainer2/BoxContainer/preview/SubViewport"]
points = PackedVector2Array(86, 79, 137, 168, 198, 266, 194, 314)
width = 11.03
width_curve = ExtResource("2_rd6wi")
gradient = ExtResource("3_oto2a")

[node name="generate" type="Button" parent="PanelContainer/BoxContainer2/BoxContainer"]
layout_mode = 2
text = "generate"

[node name="save" type="Button" parent="PanelContainer/BoxContainer2/BoxContainer"]
layout_mode = 2
text = "save"

[node name="BoxContainer2" type="BoxContainer" parent="PanelContainer/BoxContainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
vertical = true

[node name="Label" type="Label" parent="PanelContainer/BoxContainer2/BoxContainer2"]
layout_mode = 2
text = "Leave Width (min/max)"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/BoxContainer2/BoxContainer2"]
layout_mode = 2

[node name="width_min" type="SpinBox" parent="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="width_max" type="SpinBox" parent="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="Label3" type="Label" parent="PanelContainer/BoxContainer2/BoxContainer2"]
layout_mode = 2
text = "Leave Count (min/max)"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/BoxContainer2/BoxContainer2"]
layout_mode = 2

[node name="count_min" type="SpinBox" parent="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="count_max" type="SpinBox" parent="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1000.0

[node name="Label4" type="Label" parent="PanelContainer/BoxContainer2/BoxContainer2"]
layout_mode = 2
text = "Bake Res"

[node name="bake_res" type="SpinBox" parent="PanelContainer/BoxContainer2/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label5" type="Label" parent="PanelContainer/BoxContainer2/BoxContainer2"]
layout_mode = 2
text = "Point rect"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/BoxContainer2/BoxContainer2"]
layout_mode = 2

[node name="point_rect_x" type="SpinBox" parent="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -100.0

[node name="point_rect_y" type="SpinBox" parent="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -100.0

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/BoxContainer2/BoxContainer2"]
layout_mode = 2

[node name="point_rect_w" type="SpinBox" parent="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="point_rect_h" type="SpinBox" parent="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label6" type="Label" parent="PanelContainer/BoxContainer2/BoxContainer2"]
layout_mode = 2
text = "Target rect"

[node name="HBoxContainer5" type="HBoxContainer" parent="PanelContainer/BoxContainer2/BoxContainer2"]
layout_mode = 2

[node name="target_rect_x" type="SpinBox" parent="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -100.0

[node name="target_rect_y" type="SpinBox" parent="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -100.0

[node name="HBoxContainer6" type="HBoxContainer" parent="PanelContainer/BoxContainer2/BoxContainer2"]
layout_mode = 2

[node name="target_rect_w" type="SpinBox" parent="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3

[node name="target_rect_h" type="SpinBox" parent="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="PanelContainer/BoxContainer2/BoxContainer/generate" to="." method="_on_generate_pressed"]
[connection signal="pressed" from="PanelContainer/BoxContainer2/BoxContainer/save" to="." method="_on_save_pressed"]
[connection signal="value_changed" from="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer/width_min" to="." method="_on_width_min_value_changed"]
[connection signal="value_changed" from="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer/width_max" to="." method="_on_width_max_value_changed"]
[connection signal="value_changed" from="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer2/count_min" to="." method="_on_count_min_value_changed"]
[connection signal="value_changed" from="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer2/count_max" to="." method="_on_count_max_value_changed"]
[connection signal="value_changed" from="PanelContainer/BoxContainer2/BoxContainer2/bake_res" to="." method="_on_bake_res_value_changed"]
[connection signal="value_changed" from="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer3/point_rect_x" to="." method="_on_point_rect_x_value_changed"]
[connection signal="value_changed" from="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer3/point_rect_y" to="." method="_on_point_rect_y_value_changed"]
[connection signal="value_changed" from="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer4/point_rect_w" to="." method="_on_point_rect_w_value_changed"]
[connection signal="value_changed" from="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer4/point_rect_h" to="." method="_on_point_rect_h_value_changed"]
[connection signal="value_changed" from="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer5/target_rect_x" to="." method="_on_target_rect_x_value_changed"]
[connection signal="value_changed" from="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer5/target_rect_y" to="." method="_on_target_rect_y_value_changed"]
[connection signal="value_changed" from="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer6/target_rect_w" to="." method="_on_target_rect_w_value_changed"]
[connection signal="value_changed" from="PanelContainer/BoxContainer2/BoxContainer2/HBoxContainer6/target_rect_h" to="." method="_on_target_rect_h_value_changed"]
